ADD début de style

--- a/creationlivre.html
+++ b/creationlivre.html
@@ -17,25 +17,33 @@
             <fieldset>
                 <legend>Informations livre</legend>
             
-                <label for="auteur"></label>
-                <select name="auteur" id="auteur">
-                    <option value="jean_dupont"></option>
-                    <option value="jeanne_dupont"></option>
-                    <option value="maxime_augier"></option>
-                </select>
+                <div class="blocfrom">
+                     <label for="auteur">Auteur/Autrice</label>
+                     <select name="auteur" id="auteur">
+                     <option value="jean_dupont">Jean Dupont</option>
+                      <option value="jeanne_dupont"> Jeanne Dupont</option>
+                      <option value="maxime_augier"> Maxime Augier</option>
+                      </select>
+                </div>
 
-                <label for="titre">Titre</label>
-                <input name="titre" id="titre" type="text">
+                <div class="blocfrom">
+                    <label for="titre">Titre</label>
+                    <input name="titre" id="titre" type="text">
+                </div>
 
-                <label for="nb_pages">Nombre de pages</label>
-                <input name="nb_pages" id="nb_pages" type="text">
+                <div class="blocfrom">
+                    <label for="nb_pages">Nombre de pages</label>
+                    <input name="nb_pages" id="nb_pages" type="text">
+                </div>
 
-                <label for="categorie">Catégorie</label>
-                <select name="categorie" id="categorie">
-                    <option value="manga">Manga</option>
-                    <option value="comics">Comics</option>
-                    <option value="roman">Roman</option>
-                </select>
+                <div class="blocfrom">
+                    <label for="categorie">Catégorie</label>
+                    <select name="categorie" id="categorie">
+                        <option value="manga">Manga</option>
+                        <option value="comics">Comics</option>
+                        <option value="roman">Roman</option>
+                    </select>
+                </div>
 
                 <input type="submit" value="Valider">
 
