Add modif bug de liens

--- a/creationlivre.html
+++ b/creationlivre.html
@@ -8,9 +8,9 @@
 
         <nav class="menu">
             <a href="">Créer un nouvel auteur</a>
-            <a href="TP biblio/creationlivre.html">Créer un nouveau livre</a>
+            <a href="creationlivre.html">Créer un nouveau livre</a>
             <a href="">Voir les auteurs existants</a>
-            <a href="TP biblio/listelivres.html">Voir les livres existants</a>
+            <a href="listelivres.html">Voir les livres existants</a>
         </nav>
 
         <form >
