--- a/Creaauteur.html
+++ b/Creaauteur.html
@@ -4,13 +4,15 @@
         <title>Créer un nouvel auteur</title>
     </head>
     <body>
+        <fieldset>
+            <nav class="menu">
+                <a href="TP_biblio/Creaauteur">Créer un nouvel auteur</a> <br/>
+                <a href="TP biblio/creationlivre.html">Créer un nouveau livre</a><br/>
+                <a href="TP_biblio/listeauteur">Voir les auteurs existants</a><br/>
+                <a href="TP_biblio/listelivres">Voir les livres existants</a><br/>
+            </nav>
+        </fieldset>
 
-        <nav class="menu">
-            <a href="TP_biblio/Creaauteur">Créer un nouvel auteur</a>
-            <a href="TP biblio/creationlivre.html">Créer un nouveau livre</a>
-            <a href="TP_biblio/listeauteur">Voir les auteurs existants</a>
-            <a href="TP_biblio/listelivres">Voir les livres existants</a>
-        </nav>
 
         <form name="AjoutAuteur" method="POST">
             <fieldset> 
