ADD liens entre les pages

--- a/Creaauteur.html
+++ b/Creaauteur.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <title>Créer un nouvel auteur</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <fieldset>
             <nav class="menu">
-                <a href="TP_biblio/Creaauteur">Créer un nouvel auteur</a> <br/>
-                <a href="TP biblio/creationlivre.html">Créer un nouveau livre</a><br/>
-                <a href="TP_biblio/listeauteur">Voir les auteurs existants</a><br/>
-                <a href="TP_biblio/listelivres">Voir les livres existants</a><br/>
+                <a href="Creaauteur.html">Créer un nouvel auteur</a> <br/>
+                <a href="creationlivre.html">Créer un nouveau livre</a><br/>
+                <a href="listeauteur.html">Voir les auteurs existants</a><br/>
+                <a href="listelivres.html">Voir les livres existants</a><br/>
             </nav>
         </fieldset>
 
