--- a/listelivres.html
+++ b/listelivres.html
@@ -7,9 +7,9 @@
     <body>
 
         <nav class="menu">
-            <a href="">Créer un nouvel auteur</a>
+            <a href="Creaauteur.html">Créer un nouvel auteur</a>
             <a href="creationlivre.html">Créer un nouveau livre</a>
-            <a href="">Voir les auteurs existants</a>
+            <a href="listeauteur.html">Voir les auteurs existants</a>
             <a href="listelivres.html">Voir les livres existants</a>
         </nav>
 
