add retouches css unfiformité

--- a/listeauteur.html
+++ b/listeauteur.html
@@ -5,16 +5,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <fieldset>
+        
             <nav class="menu">
                 <a href="Creaauteur.html">Créer un nouvel auteur</a> <br/>
                 <a href="creationlivre.html">Créer un nouveau livre</a><br/>
                 <a href="listeauteur.html">Voir les auteurs existants</a><br/>
                 <a href="listelivres.html">Voir les livres existants</a><br/>
             </nav>
-        </fieldset>
+        
 
-        <table border="1">
+        <table>
             <thead>
                 <th>Nom</th>
                 <th>Prenom</th>
