--- a/listelivres.html
+++ b/listelivres.html
@@ -5,13 +5,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
-        <nav class="menu">
-            <a href="Creaauteur.html">Créer un nouvel auteur</a>
-            <a href="creationlivre.html">Créer un nouveau livre</a>
-            <a href="listeauteur.html">Voir les auteurs existants</a>
-            <a href="listelivres.html">Voir les livres existants</a>
-        </nav>
+        
+            <nav class="menu">
+                <a href="Creaauteur.html">Créer un nouvel auteur</a>
+                <a href="creationlivre.html">Créer un nouveau livre</a>
+                <a href="listeauteur.html">Voir les auteurs existants</a>
+                <a href="listelivres.html">Voir les livres existants</a>
+            </nav>
+        
 
         <table>
             <thead>
@@ -37,9 +38,9 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td>Taishy Nakagami</td>
-                    <td>One Piece tome 958</td>
-                    <td>120</td>
+                    <td>Eiichiro Oda</td>
+                    <td>One Piece tome 1</td>
+                    <td>207</td>
                     <td>Manga</td>
                     <td></td>
                 </tr>
