--- a/Creaauteur.html
+++ b/Creaauteur.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="blocfrom">
-                    <label for="prenoom">Prenom</label>
+                    <label for="prenom">Prenom</label>
                     <input id="prenom" name="prenom" type="text"/>
                 </div>
 
